フルスクリーンの機能を追加

--- a/YuLauncher/Properties/Settings.settings
+++ b/YuLauncher/Properties/Settings.settings
@@ -8,5 +8,8 @@
     <Setting Name="Window_H" Type="System.Double" Scope="User">
       <Value Profile="(Default)">400</Value>
     </Setting>
+    <Setting Name="FullScreen" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
