ゲーム表示機能追加 戻るボタンをMainPageに追加

--- a/YuLauncher/App.config
+++ b/YuLauncher/App.config
@@ -16,6 +16,12 @@
             <setting name="FullScreen" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="Aimisu" serializeAs="String">
+                <value>https://games.dmm.com/detail/imys/</value>
+            </setting>
+            <setting name="WindowState" serializeAs="String">
+                <value>0</value>
+            </setting>
         </YuLauncher.Properties.Settings>
     </userSettings>
 </configuration>
