--- a/YuLauncher/Properties/Settings.settings
+++ b/YuLauncher/Properties/Settings.settings
@@ -11,5 +11,11 @@
     <Setting Name="FullScreen" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
+    <Setting Name="Aimisu" Type="(Web Service URL)" Scope="User">
+      <Value Profile="(Default)">https://games.dmm.com/detail/imys/</Value>
+    </Setting>
+    <Setting Name="WindowState" Type="System.Double" Scope="User">
+      <Value Profile="(Default)">0</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
