--- a/YuLauncher/App.config
+++ b/YuLauncher/App.config
@@ -22,6 +22,9 @@
             <setting name="WindowState" serializeAs="String">
                 <value>0</value>
             </setting>
+            <setting name="LauncherComp" serializeAs="String">
+                <value>False</value>
+            </setting>
         </YuLauncher.Properties.Settings>
     </userSettings>
 </configuration>
