--- a/YuLauncher/App.config
+++ b/YuLauncher/App.config
@@ -1,7 +1,7 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <configSections>
-        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
             <section name="YuLauncher.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
         </sectionGroup>
     </configSections>
@@ -24,6 +24,21 @@
             </setting>
             <setting name="LauncherComp" serializeAs="String">
                 <value>False</value>
+            </setting>
+            <setting name="LoginStreek" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="LoginDete" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="ProgramLaunchCount" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="Month" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="Year" serializeAs="String">
+                <value>0</value>
             </setting>
         </YuLauncher.Properties.Settings>
     </userSettings>
