ログイン確認機能追加

--- a/YuLauncher/App.config
+++ b/YuLauncher/App.config
@@ -40,6 +40,12 @@
             <setting name="Year" serializeAs="String">
                 <value>0</value>
             </setting>
+            <setting name="TodaysLogin" serializeAs="String">
+                <value>null</value>
+            </setting>
+            <setting name="TodaysYesNo" serializeAs="String">
+                <value>False</value>
+            </setting>
         </YuLauncher.Properties.Settings>
     </userSettings>
 </configuration>
