Settings.settingsにNIKKEのファイルロケーションのString値を追加
WebView2のバージョンを1.0.1418.22から1.0.1587.40へアップデート
YuLauncher

更新:

Microsoft.Web.WebView2.1.0.1418.22 -> Microsoft.Web.WebView2.1.0.1587.40

MainPageにゲーム一覧ボタン追加

GameListPageClient.xamlとGameListPageClient.cs追加

GameListPageClientの初期設定を記述

GameListPageClientにNIKKE PC版スタートボタン追加

SettingPageにNIKKEファイルのゲームフォルダー場所の設定を追加

--- a/YuLauncher/Properties/Settings.settings
+++ b/YuLauncher/Properties/Settings.settings
@@ -1,5 +1,5 @@
 ﻿<?xml version='1.0' encoding='utf-8'?>
-<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="YuLauncher.Properties" GeneratedClassName="Settings">
+<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="" GeneratedClassName="Settings">
   <Profiles />
   <Settings>
     <Setting Name="Window_W" Type="System.Double" Scope="User">
@@ -40,6 +40,9 @@
     </Setting>
     <Setting Name="TodaysYesNo" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
+    </Setting>
+    <Setting Name="Nikke_File_Loc" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
     </Setting>
   </Settings>
 </SettingsFile>
