--- a/YuLauncher/YuLauncher.csproj
+++ b/YuLauncher/YuLauncher.csproj
@@ -22,9 +22,10 @@
     <ItemGroup>
       <PackageReference Include="EntityFramework" Version="6.4.4" />
       <PackageReference Include="MahApps.Metro" Version="2.4.9" />
-      <PackageReference Include="Microsoft.Web.WebView2" Version="1.0.1418.22" />
+      <PackageReference Include="Microsoft.Web.WebView2" Version="1.0.1587.40" />
       <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
       <PackageReference Include="System.Data.SQLite" Version="1.0.117" />
+      <PackageReference Include="WindowsAPICodePack-Shell" Version="1.1.1" />
     </ItemGroup>
 
     <ItemGroup>
