ゲームウィンドウをリサイズ可能に

--- a/YuLauncher/App.config
+++ b/YuLauncher/App.config
@@ -46,6 +46,12 @@
             <setting name="TodaysYesNo" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="Nikke_File_Loc" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="GameWindowResize" serializeAs="String">
+                <value>False</value>
+            </setting>
         </YuLauncher.Properties.Settings>
     </userSettings>
 </configuration>
