バグ修正 + 機能追加
ファイルが存在しない場合のエラーのバグを修正

プロパティの機能追加

--- a/YuLauncher/YuLauncher.csproj
+++ b/YuLauncher/YuLauncher.csproj
@@ -76,4 +76,11 @@
       </None>
     </ItemGroup>
 
+    <ItemGroup>
+      <None Remove="image\404-error-3060993_640.png" />
+      <Resource Include="image\404-error-3060993_640.png">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </Resource>
+    </ItemGroup>
+
 </Project>
