--- a/YuLauncher/YuLauncher.csproj
+++ b/YuLauncher/YuLauncher.csproj
@@ -40,6 +40,7 @@
       <PackageReference Include="NLog.Schema" Version="5.3.2" />
       <PackageReference Include="NLog.WindowsEventLog" Version="5.3.2" />
       <PackageReference Include="System.Data.SQLite" Version="1.0.118" />
+      <PackageReference Include="System.Text.Json" Version="9.0.0-preview.7.24405.7" />
       <PackageReference Include="Tommy" Version="3.1.2" />
       <PackageReference Include="WindowsAPICodePack-Shell" Version="1.1.1" />
       <PackageReference Include="WPF-UI" Version="3.0.4" />
