--- a/YuLauncher/YuLauncher.csproj
+++ b/YuLauncher/YuLauncher.csproj
@@ -31,19 +31,20 @@
     </ItemGroup>
 
     <ItemGroup>
-      <PackageReference Include="EntityFramework" Version="6.4.4" />
-      <PackageReference Include="HtmlAgilityPack" Version="1.11.61" />
-      <PackageReference Include="Microsoft.Web.WebView2" Version="1.0.2584-prerelease" />
+      <PackageReference Include="EntityFramework" Version="6.5.1" />
+      <PackageReference Include="HtmlAgilityPack" Version="1.11.67" />
+      <PackageReference Include="Microsoft.Web.WebView2" Version="1.0.2839-prerelease" />
       <PackageReference Include="NLog" Version="5.3.2" />
       <PackageReference Include="NLog.Config" Version="4.7.15" />
       <PackageReference Include="NLog.Extensions.Logging" Version="5.3.11" />
       <PackageReference Include="NLog.Schema" Version="5.3.2" />
       <PackageReference Include="NLog.WindowsEventLog" Version="5.3.2" />
       <PackageReference Include="System.Data.SQLite" Version="1.0.118" />
-      <PackageReference Include="System.Text.Json" Version="9.0.0-preview.7.24405.7" />
+      <PackageReference Include="System.Reactive" Version="6.0.1" />
+      <PackageReference Include="System.Text.Json" Version="9.0.0-rc.1.24431.7" />
       <PackageReference Include="Tommy" Version="3.1.2" />
       <PackageReference Include="WindowsAPICodePack-Shell" Version="1.1.1" />
-      <PackageReference Include="WPF-UI" Version="3.0.4" />
+      <PackageReference Include="WPF-UI" Version="4.0.0-rc.2" />
       <PackageReference Include="WPFLocalizeExtension" Version="3.10.0" />
     </ItemGroup>
 	
