--- a/.github/workflows/ai-review.yaml
+++ b/.github/workflows/ai-review.yaml
@@ -33,8 +33,8 @@ jobs:
           debug: false
           review_simple_changes: false
           review_comment_lgtm: false
-          openai_light_model: gpt-4 # 好みで変更
-          openai_heavy_model: gpt-4 # 好みで変更
+          openai_light_model: gpt-4o # 好みで変更
+          openai_heavy_model: gpt-4o # 好みで変更
           openai_timeout_ms: 900000 # 15分.
           language: ja-JP
           path_filters: |
