アプリの初期設定とアップデートチェック機能を追加
`App.xaml.cs` において、`System` 名前空間のインポートが追加されました。
`Application_Startup` メソッド内で、`FirstLunch` と `LanguageCheck` メソッドの呼び出しが非同期に変更され、`UpdateCheck` メソッドの呼び出しが追加されました。
`Initialize` メソッドが `Task` から `ValueTask` に変更されました。
`UpdateCheck` メソッドが追加され、GitHub からのアップデートをチェックし、新しいバージョンがある場合にユーザーに通知し、アップデートをダウンロードして適用します。
`FirstLunch` メソッドと `LanguageCheck` メソッドが非同期の `ValueTask` に変更されました。
`Program.cs` ファイルが新たに追加され、`Main` メソッドが定義されました。このメソッドは `VelopackApp` を使用してアプリケーションの初期設定を行い、その後 `App` クラスのインスタンスを作成して実行します。
`YuLauncher.csproj` に `StartupObject` プロパティが追加され、アプリケーションのエントリーポイントが `YuLauncher.Program` に設定されました。
`YuLauncher.csproj` に `ValueTaskSupplement` と `Velopack` のパッケージ参照が追加されました。

--- a/YuLauncher/YuLauncher.csproj
+++ b/YuLauncher/YuLauncher.csproj
@@ -8,6 +8,7 @@
         <Configurations>Debug;Release;kireinaRelease</Configurations>
         <LangVersion>10</LangVersion>
         <ApplicationIcon>Core\Assets\YuIcon.ico</ApplicationIcon>
+		<StartupObject>YuLauncher.Program</StartupObject>
     </PropertyGroup>
 
     <ItemGroup>
@@ -43,6 +44,8 @@
       <PackageReference Include="System.Reactive" Version="6.0.1" />
       <PackageReference Include="System.Text.Json" Version="9.0.0-rc.1.24431.7" />
       <PackageReference Include="Tommy" Version="3.1.2" />
+      <PackageReference Include="ValueTaskSupplement" Version="1.1.0" />
+      <PackageReference Include="Velopack" Version="0.0.626" />
       <PackageReference Include="WindowsAPICodePack-Shell" Version="1.1.1" />
       <PackageReference Include="WPF-UI" Version="4.0.0-rc.2" />
       <PackageReference Include="WPFLocalizeExtension" Version="3.10.0" />
