--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,5 +30,5 @@ jobs:
               run: |
                     dotnet tool install -g vpk
                     vpk download github --repoUrl https://github.com/johmaru/Yu_Launcher
-                    vpk pack -u MyUniqueIdentifier -v ${{ steps.get-version.outputs.version }} -p publish --channel win
+                    vpk pack YuLauncher.exe -v ${{ steps.get-version.outputs.version }} -p publish
                     vpk upload github --repoUrl https://github.com/johmaru/Yu_Launcher --publish --releaseName "YuLauncher ${{ steps.get-version.outputs.version }}" --tag v${{ steps.get-version.outputs.version }}
