ImportとExportの機能改善

--- a/YuLauncher/YuLauncher.csproj
+++ b/YuLauncher/YuLauncher.csproj
@@ -31,6 +31,10 @@
         <SubType>Code</SubType>
         <DependentUpon>WebSaverWindow.xaml</DependentUpon>
       </Compile>
+      <None Update="C:\Users\Administrator\.nuget\packages\nlog.config\4.7.15\contentFiles\any\any\NLog.config">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+        <Link>NLog.config</Link>
+      </None>
     </ItemGroup>
 
     <ItemGroup>
