ジャンル作成機能追加 & バグ修正

--- a/YuLauncher/YuLauncher.csproj
+++ b/YuLauncher/YuLauncher.csproj
@@ -39,8 +39,8 @@
 
     <ItemGroup>
       <PackageReference Include="EntityFramework" Version="6.5.1" />
-      <PackageReference Include="HtmlAgilityPack" Version="1.11.67" />
-      <PackageReference Include="Microsoft.Web.WebView2" Version="1.0.2839-prerelease" />
+      <PackageReference Include="HtmlAgilityPack" Version="1.11.70" />
+      <PackageReference Include="Microsoft.Web.WebView2" Version="1.0.2895-prerelease" />
       <PackageReference Include="NLog" Version="5.3.4" />
       <PackageReference Include="NLog.Config" Version="4.7.15" />
       <PackageReference Include="NLog.Extensions.Logging" Version="5.3.14" />
@@ -51,7 +51,7 @@
       <PackageReference Include="System.Text.Json" Version="9.0.0-rc.2.24473.5" />
       <PackageReference Include="Tommy" Version="3.1.2" />
       <PackageReference Include="ValueTaskSupplement" Version="1.1.0" />
-      <PackageReference Include="Velopack" Version="0.0.783-g8c9c649" />
+      <PackageReference Include="Velopack" Version="0.0.869" />
       <PackageReference Include="WindowsAPICodePack-Shell" Version="1.1.1" />
       <PackageReference Include="WPF-UI" Version="4.0.0-rc.2" />
       <PackageReference Include="WPFLocalizeExtension" Version="3.10.0" />
