--- a/YuLauncher/YuLauncher.csproj
+++ b/YuLauncher/YuLauncher.csproj
@@ -9,7 +9,7 @@
         <LangVersion>12</LangVersion>
         <ApplicationIcon>Core\Assets\YuIcon.ico</ApplicationIcon>
 		<StartupObject>YuLauncher.Program</StartupObject>
-        <Version>0.3.7</Version>    
+        <Version>0.3.8</Version>    
     </PropertyGroup>
 
 
@@ -48,6 +48,7 @@
       <PackageReference Include="NLog.WindowsEventLog" Version="5.3.4" />
       <PackageReference Include="System.Data.SQLite" Version="1.0.119" />
       <PackageReference Include="System.Reactive" Version="6.0.1" />
+      <PackageReference Include="System.Text.Encoding.CodePages" Version="9.0.0" />
       <PackageReference Include="System.Text.Json" Version="9.0.0" />
       <PackageReference Include="Tommy" Version="3.1.2" />
       <PackageReference Include="ValueTaskSupplement" Version="1.1.0" />
